# mcccm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  driver.js  geometry_plots.cpp  main.cpp  main_emscripten.cpp  package.json  plot_geometry.py  vcpkg.json
cmake/: LibraryConfig.cmake
condensation/: component.cpp  component.h  condensation_implementations.cpp  condensation_implementations.h  forward_euler.h  multicomponent_system.cpp  multicomponent_system.h  run_condensation.cpp  run_condensation.h  single_component_system.cpp  single_component_system.h
geometry/: generated_geometry.cpp  generated_geometry.h  geometry.cpp  geometry.h
mcccm/: CMakeLists.txt
mcccm/include/mcccm/: physical_constants.h
mcccm/include/mcccm/condensation/: condensation_implementations.h  multicomponent_system.h  run_condensation.h
mcccm/include/mcccm/geometry/: geometry.h
mcccm/src/mcccm/condensation/: component.cpp  condensation_implementations.cpp  multicomponent_system.cpp  run_condensation.cpp  single_component_system.cpp
mcccm/src/mcccm/geometry/: generated_geometry.cpp  geometry.cpp
